--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "run_id": "sim_run_001",
   "master_seed": 42,
   "logging": {
-    "level": "INFO",
+    "level": "DEBUG",
     "format": "%(asctime)s - %(levelname)s - %(message)s"
   }
 }
