--- a/config.json
+++ b/config.json
@@ -4,5 +4,12 @@
   "logging": {
     "level": "DEBUG",
     "format": "%(asctime)s - %(levelname)s - %(message)s"
+  },
+  "simulation": {
+    "particle_count": 50,
+    "min_mass": 10.0,
+    "max_mass": 50.0,
+    "gravity_constant": 0.1,
+    "softening_factor": 10
   }
 }
