Implemented inelastic collisions to convert kinetic energy into thermal energy, but I made an error that caused the system to incorrectly gain energy.

--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
     "softening_factor": 10,
     "min_temp": 200.0,
     "max_temp": 1000.0,
-    "heat_transfer_coefficient": 0.1
+    "heat_transfer_coefficient": 0.1,
+    "coefficient_of_restitution": 0.8
   }
 }
