--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
     "min_temp": 200.0,
     "max_temp": 1000.0,
     "heat_transfer_coefficient": 0.1,
-    "coefficient_of_restitution": 0.8
+    "coefficient_of_restitution": 0.8,
+    "grid_cell_size_multiplier": 5.0
   }
 }
