Progressively replaced the original grid-based local gravity with a more realistic, Numba-accelerated Barnes-Hut algorithm, and then, guided by profiler data, I systematically identified and fixed severe performance bottlenecks related to the tree-building process and redundant calculations in the energy logging function.

--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
     "max_mass": 10.0,
     "gravity_constant": 0.1,
     "softening_factor": 10,
+    "barnes_hut_theta": 0.5,
     "min_temp": 200.0,
     "max_temp": 1000.0,
     "heat_transfer_coefficient": 0.1,
