--- a/config.json
+++ b/config.json
@@ -18,6 +18,7 @@
     "coefficient_of_restitution": 0.5,
     "grid_cell_size_multiplier": 10.0,
     "position_correction_factor": 1.05,
-    "collision_solver_iterations": 1
+    "collision_solver_iterations": 1,
+    "explosion_efficiency": 0.1
   }
 }
