Added black-body radiation (I belive) which leads to particles cooling over time, thus both making the sim more realistic and not explode constantly.

--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "grid_cell_size_multiplier": 10.0,
     "position_correction_factor": 1.05,
     "collision_solver_iterations": 1,
-    "explosion_efficiency": 0.5
+    "explosion_efficiency": 0.5,
+    "thermal_damping_factor": 0.0005
   }
 }
